<resources>
    <string name="app_name">Mobility</string>
    <string name="google_client_id">639003857573-tva58tn446d3v78tr6e9bthod5uu8v4v.apps.googleusercontent.com</string>
    <string name="facebook_app_id">2614116595326547</string>
    <string name="fb_login_protocol_scheme">fb2614116595326547</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="mobility_image_content_description">Mobility Image</string>

    <string name="onboarding_selected_categories">select at least 2 categories. You have selected: %1$d</string>
    <string name="navigation_finish_message">Finish</string>
    <string name="login_message">Login</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="error_loading_data">An error occurred while loading data</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>

    <string name="notifications_preference_category_title">Notifications</string>
    <string name="notification_preference_title">Display notifications</string>
    <string name="default_ringtone_preference">Default</string>
    <string name="ringtone_preference_title">Change notification ringtone</string>
    <string name="user_info_preference_category_title">"User info</string>
    <string name="delivery_address_preference_title">Delivery address</string>
    <string name="phone_number_preference_title">Phone number</string>
    <string name="login_preference_title">Login</string>
    <string name="feedback_preference_category_title">Feedback</string>
    <string name="feedback_preference_title">Send feedback</string>
    <string name="empty_cart_message">The cart is empty</string>
    <string name="purchase">Purchase</string>
    <string name="cart">Cart</string>
    <string name="product_quantity">Quantity:\n  %1$d</string>
    <string name="authenticate_title">Authenticate with fingerprint to continue</string>
    <string name="authenticate_other_method">Negative Button</string>
    <string name="search_hint">Search products in this category</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="search_menu_text">Search</string>
    <string name="onboarding_text">Mobility</string>
    <string name="onboarding_description_text">Easy to buy, free to try</string>
    <string name="onboarding_have_fun_text">Just use it!</string>
</resources>
